# find-files

./: .gitignore  README.md  setup.cfg
findFiles/: find.py
findFiles/result05052022_101729/: find.py
result05052022_170001/: LICENSE
