[metadata]
name = findFiles
version = 0.0.1
author = Krish Agrawal
author_email = diwankrish.17@gmail.com
description = For finding text files that contains a particular entered string
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Krish2208/find-files
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True